syntax = "proto3";

option java_multiple_files = true;
option java_package = "generated.grpc.GradeReport";
option java_outer_classname = "GradeReportImpl";

package qualityeducation;

// GradeReport service definition
service GradeReportService {
  // Unary RPC
  rpc GetGradeReport(GradeReportRequest) returns (GradeReportResponse);

  // Client Streaming RPC
  rpc PredictFinalGrade(stream AssessmentScore) returns (GradeReportResponse);
}

// Request message for GetGradeReport
message GradeReportRequest {
  string student_name = 1;
}

// Response message with grade
message GradeReportResponse {
  string grade = 1;
}

// Request message for PredictFinalGrade (stream of scores)
message AssessmentScore {
  int32 score = 1;
}